# TilkyEngine

./: CMakeLists.txt  config.h  main.cpp
Headers/: GameTime.h  InputManager.h  Player.h  Vector.h
Headers/Math/: Vector.h
Headers/Objects/: Player.h  Sector.h  Wall.h
Headers/Renderer/: BSP.h  MapEditor.h  Renderer.h
src/: InputManager.cpp  Player.cpp
src/Engine/: InputManager.cpp
src/Objects/: Player.cpp
src/Renderer/: BSP.cpp  MapEditor.cpp  Renderer.cpp
